2009-06-12 Roman
- /SYS: *.am files is clear
- /Archive/FSArch: Value's archive id limit at 20 is fixed on time bordered to 20 simbols id reading from archive file.


2009-06-10 Roman
- FIX:/DAQ/DAQGate: Vertical redundance is fixed.


2009-06-09 Roman 0.6.3.3
- /DemoDB: Final fixes and clearings.
- /SYS: Splash image is updated.
- /SYS: RPM build spec file is adapted for 0.6.3.3 building.
- /UI/VCAEngine: Detailed messages is added for primitive "Document" generation errors.


2009-06-08 Roman
- !!!!:/Protocol: The subsystem modules API version rise to 2.
- FIX:/SYS: No present config's file state error result process is added.
- FIX:/UI/VCAEngine: Attributes write sequence for primitive "Document" is fixed by primitives main calc add.
- !!!!:/DOC: OpenSCADA manual documents and API document and TODO is updated.
- !!:/Protocol/HTTP: Document is updated and translated to English is added and released version 1.4.1.
- !!:/Protocol/SelfSystem: Document is updated and translated to English is added and released version 0.9.0.
- !!:/Special/FLibComplex1: Document is updated.
- !!:/Special/FLibSYS: Document is updated. and released version 0.8.1.
- !!:/Transport/SSL: Document is updated and translated to English is added and released version 0.8.1.
- !!:/Transport/Serial: Document is updated and translated to English is added and released version 0.5.0.
- !!:/UI/QTCfg: Document is updated and translated to English is added and released version 1.8.0.
- !!:/UI/QTStarter: Document is updated and translated to English is added and released version 1.5.3.
- !!:/UI/VCAEngine: Document is updated and released version 0.8.10.
- !!:/UI/Vision: Released version 0.8.10.
- !!:/UI/WebCfgD: Document is updated and translated to English is added and released version 0.6.1.
- !!:/UI/WebVision: Released version 0.6.10.


2009-06-05 Roman
- !:/SYS: Programm's work version is changed to 0.6.3.3.
- !!!!:/Archives, /DAQS: The subsystems' modules API version rise to 3.