@@ -726,7 +726,7 @@ int Page::calcPer(  )
 
 void Page::setCalcLang( const string &ilng )
 {
-    m_proc = ilng+"\n"+calcProg();
+    m_proc = ilng.empty() ? "" : ilng+"\n"+calcProg();
     modif();
 }
 
